# spawn-ext-spectask

./: .cursorignore  .gitignore  AGENTS.md  README.md  Untitled  pyproject.toml
.cursor/: mcp.json
.cursor/skills/spawn-ext-bootstrap/: SKILL.md
.cursor/skills/spawn-ext-config/: SKILL.md
.cursor/skills/spawn-ext-extract-stack-patterns/: SKILL.md
.cursor/skills/spawn-ext-hints/: SKILL.md
.cursor/skills/spawn-ext-increment-version/: SKILL.md
.cursor/skills/spawn-ext-mcp/: SKILL.md
.cursor/skills/spawn-ext-skill-sources/: SKILL.md
draft/: main.ru.md
extsrc/: config.yaml
extsrc/files/spec/: design.yaml  (+1 more)
extsrc/mcp/: linux.json  windows.json
extsrc/setup/: install_spectask_mcp.py
extsrc/skills/: spectask-code-review-passed.md  spectask-create.md  spectask-design.md  spectask-execute-step-by-step.md  spectask-execute.md  spectask-extend.md  spectask-extract-patterns.md  spectask-from-jira.md  spectask-seed-create.md  spectask-spec-review-passed.md
scripts/: publish.py
spawn/: navigation.yaml
spawn-ext-guide/: user-guide.md
spawn-ext-guide/ai/: cli.md  config-yaml.md  core.md  mcp-json.md  skill-sources.md
spawn/.core/: config.yaml
spawn/.metadata/: git-ignore.txt  ide.yaml
spec/: main.md
spec/design/: hla.md
spec/seeds/: 1-jira-comments-mcp.md
spectask_mcp/: __init__.py  __main__.py  cli.py  config.py  config_prompts.py  jira_actions.py  mcp_app.py  run_cmd.py
spectask_mcp/jira/: __init__.py  base.py  cloud.py  factory.py  http_cloud.py  http_common.py  http_self_hosted.py  jql.py  pycontribs_factory.py  self_hosted.py  types.py
(+88 files in other folders)
